# python-package-template

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc__  .python-version  CHANGELOG.md  CVERSION  LICENSE  MANIFEST.in  Makefile  README.md  Taskfile.yml  bump_semver_patch.sh  cookiecutter.json  pyproject.toml  requirements.txt  setup.cfg  tox.ini
cookiecutter_replay/: replay_pip_no_all.json  replay_pip_yes_all.json  replay_poetry_no_all.json  replay_poetry_yes_all.json
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_main.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .env  .env_dev  .env_prod  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.md  Taskfile.yml  bump_calver_build.sh  poetry.toml  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: build.yml  codeql-analysis.yml  publish.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/taskfiles/: black.yml  docs.yml  flake8.yml  mkdocs.yml  mypy.yml  poetry.yml  pre-commit.yml  pylint.yml  pytest.yml  ruff.yml  tox.yml
{{cookiecutter.project_slug}}/tests/: test_main.py
